Removed no longer needed default files, started database interface and options menu
git-svn-id: http://svn.jamesgrafton.com/recipe-shopper/AdventureUrban/trunk@142 6dc030ff-0281-0410-8a41-8174dcc5abea

--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, AdventureUrban!</string>
+    
     <string name="app_name">Adventure Urban</string>
+<string name="menu_options_adventures">Adventures</string><string name="menu_options_create">Create</string><string name="menu_options_profile">Profile</string>
+<string name="layout_create_comingsoon">Coming soon! For now please visit adventureurban.com</string>
 </resources>
